--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     date.setHours(0, 0, 0, 0)
     if (questiondate.getTime() < date.getTime()) {
       result.innerHTML = "Not yet..."
-    } elif (questiondate.getTime() == date.getTime()) {
+    } else if (questiondate.getTime() == date.getTime()) {
       result.innerHTML = "YES"
-    } else () {
+    } else {
       result.innerHTML = "Wait for next year..."
     }
   </script>
