--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <h1 id="result"></h1>
   <script>
-    const questiondate = Date.parse(window.location.hash)
+    const questiondate = new Date(window.location.hash)
     const date = new Date
     const result = document.getElementById("result")
     date.setHours(0, 0, 0, 0)
