--- a/index.html
+++ b/index.html
@@ -13,20 +13,24 @@
 <body>
   <h1 id="result"></h1>
   <script>
-    const questiondate = new Date(window.location.hash)
-    const date = new Date
-    const result = document.getElementById("result")
-    date.setHours(0, 0, 0, 0)
-    if (questiondate.getTime() > date.getTime()) {
-      result.innerHTML = "Not yet..."
-      document.body.style.backgroundColor = "lightcyan"
-    } else if (questiondate.getTime() == date.getTime()) {
-      result.innerHTML = "YES"
-      document.body.style.backgroundColor = "aquamarine"
-    } else {
-      result.innerHTML = "Wait for next year..."
-      document.body.style.backgroundColor = "bisque"
+    function locationHashChanged() {
+      var questiondate = new Date(window.location.hash)
+      var date = new Date
+      var result = document.getElementById("result")
+      date.setHours(0, 0, 0, 0)
+      if (questiondate.getTime() > date.getTime()) {
+        result.innerHTML = "Not yet..."
+        document.body.style.backgroundColor = "lightcyan"
+      } else if (questiondate.getTime() == date.getTime()) {
+        result.innerHTML = "YES"
+        document.body.style.backgroundColor = "aquamarine"
+      } else {
+        result.innerHTML = "Wait for next year..."
+        document.body.style.backgroundColor = "bisque"
+      }
     }
+    locationHashChanged()
+    window.addEventListener('hashchange', locationHashChanged)
   </script>
 </body>
 </html>
